Sun Aug  9 07:25:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/ripper/eventids2.c (token_to_eventid): added
	  keyword_do_LAMBDA.  [ruby-dev:39049]

Sun Aug  9 02:07:41 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* tool/compile_prelude.rb: fixes a regexp pattern for require.
	  It had matched 'require("foo"('.

Sat Aug  8 11:42:44 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bigzero_p): removing BDIGITS() inside of the
	  loop. inspired by Masahiro Kanai's blog entry
	  <http://d.hatena.ne.jp/CanI/20090807/1249657492>.

Sat Aug  8 06:18:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_symbol r_symlink, r_symbol, r_object0): fix for
	  non-ascii symbols.  loading such symbols can cause segfaults in
	  older versions.  [ruby-core:24788]

Fri Aug  7 03:25:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_error.c (error_print): removed an extra argument.

Fri Aug  7 03:22:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_exc_raise, rb_exc_fatal): nil is used to reraise.

Fri Aug  7 01:49:41 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/sha2/sha2.c: The ULL suffix is not supported by
	  pre-C99 compilers, so resurrect the ULL() macro to regain
	  portability. [ruby-dev:39032]

Fri Aug  7 01:35:26 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/*/extconf.rb: inttypes.h and unistd.h need not be
	  checked here. [ruby-dev:39032]

Fri Aug  7 01:04:17 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb (search_tclConfig): fix logic bug.

Thu Aug  6 21:18:15 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/digest/sha2/lib/sha2.rb: should require sha2.so.

Thu Aug  6 21:11:40 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/digest/sha2/sha2.c (*_Final): typos.

Thu Aug  6 19:46:56 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/sha2/sha2.h (BYTE_ORDER): Define BYTE_ORDER as
	  necessary. [ruby-dev:39029]

Thu Aug  6 16:36:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
