@@ -1,3 +1,7 @@
+Sat Aug  8 17:03:21 2009  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* encoding.c (enc_ascii_compatible_p): added. [ruby-core:24793]
+	  (Init_Encoding): New API Encoding#ascii_compatible?.
 Sun Aug  9 07:25:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/ripper/eventids2.c (token_to_eventid): added
